# oghma_rust_bot

./: Cargo.toml  README.md  TODO.md
src/: main.rs
src/commands/: create.rs  create_magic_item.rs  create_monster.rs  create_spell.rs  create_spells.rs  help.rs  list_magic_item.rs  list_magic_items.rs  list_spell.rs  list_spells.rs  mod.rs  number_input.rs  ping.rs  remove_magic_item.rs  remove_spell.rs  roll.rs  welcome.rs
src/commands/add/: mod.rs  proficiencies.rs  speed.rs
src/commands/create/: magic_item.rs  mod.rs  monster.rs  spell.rs
src/commands/list/: magic_item.rs  magic_items.rs  mod.rs  monster.rs  monsters.rs  spell.rs  spells.rs
src/commands/remove/: magic_item.rs  mod.rs  spell.rs
