[package]
name = "oghma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["full"] }
postgrest = "1.5.0"
postgres = "0.19.5"
serde_json = "1.0.96"
serde = "1.0.163"